src/ui/snapshots/cornercase__ui__remote__tests__notice__says_it_is_connecting_while_an_attempt_runs.snap
---
source: src/ui/remote.rs
assertion_line: 117
expression: "drawn(70, 12, &notice).backend()"
---
"                                                                      "
"                                                                      "
"     ╭─ Connection lost ────────────────────────────────────────╮     "
"     │                                                          │     "
"     │ reconnecting to devbox…                                  │     "
"     │ connecting…                                              │     "
"     │                                                          │     "
"     │                                                          │     "
"     │ its shells keep running on devbox                  quit  │     "
"     ╰──────────────────────────────────────────────────────────╯     "
"                                                                      "
"                                                                      "
