src/ui/snapshots/cornercase__ui__remote__tests__notice__says_where_it_reconnects_and_when.snap
---
source: src/ui/remote.rs
assertion_line: 110
expression: "drawn(70, 12, &notice).backend()"
---
"                                                                      "
"                                                                      "
"     ╭─ Connection lost ────────────────────────────────────────╮     "
"     │                                                          │     "
"     │ reconnecting to devbox…                                  │     "
"     │ trying again in 4 s                                      │     "
"     │ ssh: connect to host devbox port 22: Connection refused  │     "
"     │                                                          │     "
"     │ its shells keep running on devbox                  quit  │     "
"     ╰──────────────────────────────────────────────────────────╯     "
"                                                                      "
"                                                                      "
